--- a/Amazing Numbers/Jumping numbers/task-info.yaml
+++ b/Amazing Numbers/Jumping numbers/task-info.yaml
@@ -912,5 +912,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/13204#comment
-status: Unchecked
-record: -1
+status: Solved
+record: 8
