--- a/Amazing Numbers/Happy and Sad numbers/task-info.yaml
+++ b/Amazing Numbers/Happy and Sad numbers/task-info.yaml
@@ -928,5 +928,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/13205#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Fri, 21 Apr 2023 08:52:24 UTC"
+record: 7
