--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/531718/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Mon, 17 Apr 2023 16:34:24 UTC"
+update_date: "Fri, 21 Apr 2023 07:16:37 UTC"
 stages:
 - id: 931
   step: 13198
@@ -25,10 +25,10 @@ stages:
   is_completed: true
 - id: 937
   step: 13204
-  is_completed: false
+  is_completed: true
 - id: 938
   step: 13205
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Units of information
